[package]
name = "http-bench-json-ops-winit"
version = "0.1.0"
authors = ["Lukas Bombach <lukas.bombach@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.95.0"
tokio = {version = "1.9.0", features =["full"] }
log = "0.4.14"
winit = "0.25.0"


