[package]
name = "js-runtime"
version = "0.1.0"
authors = ["Lukas Bombach <lukas.bombach@googlemail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_console = "0.14.0"
deno_core = "0.96.0"
deno_timers = "0.12.0"
deno_url = "0.14.0"
deno_web = "0.45.0"
deno_webidl = "0.14.0"
tokio = {version = "1.9.0", features =["full"] }
