[package]
name = "poc"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deno_core = "0.96.0"
deno_runtime = "0.22.2"
gui-runtime = { path = "../gui-runtime" }
js-runtime = { path = "../js-runtime" }
js-runtime-deno = { path = "../js-runtime-deno" }
serde = "1.0.127"
simple_logger = "1.13.0"
tokio = { version = "1.10.0", features = ["full"] }
winit = "0.25.0"
